testsuite/tests/grammar/invalid_lexers/pattern_8.lkt
from common import Example

lexer foo_lexer {
    val pat: Int = p"example"
}
